package org.factoriaf5.peaje_y_vehiculos;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class PeajeYVehiculosApplication {

	public static void main(String[] args) {
		SpringApplication.run(PeajeYVehiculosApplication.class, args);
	}

}
