package org.factoriaf5.peaje_y_vehiculos.repositories;

import org.factoriaf5.peaje_y_vehiculos.models.Peaje;
import org.springframework.data.jpa.repository.JpaRepository;

public interface PeajeRepository extends JpaRepository<Peaje,Long>{
    
}
